--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "cakephp/queue": "^0.1.12",
+        "enqueue/dbal": "^0.10.17",
+        "enqueue/redis": "^0.10.9",
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "predis/predis": "^1"
     },
     "require-dev": {
         "cakephp/bake": "^2.6",
